--- a/c3.html
+++ b/c3.html
@@ -37,3 +37,6 @@
     </script>
 </body>
 </html>
+
+Домашна 1: 1 input, drop down operations, 2 input, button, =, 3 input
+Домашна 2: 1 input, drop down (celsius to fahrenheit, i obratno), =, 2 input
