--- a/d1/d1.html
+++ b/d1/d1.html
@@ -20,9 +20,9 @@
     <script>
         var broj1 = document.querySelector('.num1');
 
-        var add = document.querySelector('.add');
+        // var add = document.querySelector('.add');
 
-        var subtract = document.querySelector('.subtract');
+        // var subtract = document.querySelector('.subtract');
 
         var broj2 = document.querySelector('.num2');
 
