--- a/d1/d2.html
+++ b/d1/d2.html
@@ -41,3 +41,6 @@
     </script>
 </body>
 </html>
+
+
+// input range 10 - 100; div se zgolemuva - namaluva so slajderot; event: change; this.value // 
