--- a/zadaci/zadaca1.html
+++ b/zadaci/zadaca1.html
@@ -17,7 +17,7 @@
         btn.addEventListener('click', function() {
         for(var i = 0; i < niza.length; i++){
             if(input.value == niza[i]){
-                console.log(input.value);
+                console.log('IMETO E NAJDENO');
             }
         }
         })
